[package]
name = "abr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellperson = "0.18.0"
pairing = "0.21.0"
rand = "0.8.4"
bls12_381 = "0.6.0"
sha2 = "0.9.8"
ff = "0.11.0"
neptune = "5.1.0"
typenum = "1.14.0"
